--- a/views/html/projectsform.html
+++ b/views/html/projectsform.html
@@ -4,7 +4,6 @@
         		<div class="alert alert-{{msgClass}}" ng-if="msgs.length > 0">
         			<p ng-repeat="msg in msgs">{{msg}}</p>
         		</div>
-        		
 			    <nav class="navbar navbar-expand-lg navbar-light bg-light subMenu"
 			            id="projectSubmenu">
 			            <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -14,17 +13,18 @@
 			                <em class="fa fa-ellipsis-v"></em>
 			            </button>
 			                     
+        				<div class="imgDiv"><img src="{{item.avatar}}" /></div>
 			            <div class="collapse navbar-collapse" id="memberSubmenuContent">
 			                 <ul>
 			                     <li>
 			                        <a class="nav-link" target="_self"
-			                            href="{{MYDOMAIN}}/opt/projects/tasks/id/{{item.id}}">
+			                            href="{{MYDOMAIN}}/opt/tasks/list/id/{{item.id}}">
 			                            <em class="fa fa-hammer"></em>{{txt('TASKS')}}
 			                         </a>
 			                     </li>
 			                     <li>
 			                        <a class="nav-link" target="_self"
-			                            href="{{MYDOMAIN}}/opt/members/list/type/projects{{item.id}}">
+			                            href="{{MYDOMAIN}}/opt/members/list/type/projects/id/{{item.id}}">
 			                            <em class="fa fa-users"></em>{{txt('MEMBERS')}}
 			                         </a>
 			                     </li>
@@ -36,29 +36,49 @@
 			                     </li>
 			                     <li>
 			                         <a class="nav-link" target="_self"
+			                              href="{{MYDOMAIN}}/opt/markets/list/type/projects/id/{{item.id}}">
+			                              <em class="fa fa-shopping-basket"></em>{{txt('MARKET')}}
+			                         </a>
+			                     </li>
+			                     <li>
+			                         <a class="nav-link" target="_self" title="total/new"
 			                              href="{{MYDOMAIN}}/opt/comments/list/type/projects/id/{{item.id}}">
-			                              <em class="fa fa-comments"></em>{{txt('WALL')}}
+			                              <em class="fa fa-comments"></em>{{txt('CHATS')}}
 			                              {{commentCount.total}}<span ng-if="commentCount.new > 0">/<strong>{{commentCount.new}}</strong></span>                        
 			                         </a>
 			                     </li>
+			                     <li>
+			                         <a class="nav-link" target="_self" title="total/new"
+			                              href="{{MYDOMAIN}}/opt/voks/list/type/projects/id/{{item.id}}">
+			                              <em class="fa fa-balance-scale"></em>{{txt('POLLS')}}
+			                              {{pollCount.total}}<span ng-if="pollCount.new > 0">/<strong>{{pollCount.new}}</strong></span>                        
+			                         </a>
+			                     </li>
+			                      <li>
+			                         <a class="nav-link" target="_self" title="total/future"
+			                              href="{{MYDOMAIN}}/opt/events/list/type/projects/id/{{item.id}}">
+			                               <em class="fa fa-calendar"></em>{{txt('EVENTS')}}
+			                              {{eventCount.total}}<span ng-if="eventCount.new > 0">/<strong>{{eventCount.new}}</strong></span>                        
+			                         </a>
+			                      </li>
 			                  </ul>   
 			             </div>     
 				</nav>        		
         		
                 <div id="projectForm2">
                 	<h3>{{txt('PROJECT')}}</h3>
-				    <form method="post" id="projectForm" action="{{MYDOMAIN}}" target="_self">
+				    <form method="post" id="projectForm3" action="./index.php" target="_self">
 				    	<input type="hidden" name="option" value="projects" />	
 				    	<input type="hidden" name="task" value="save" />	
 				    	<input type="hidden" name="id" value="{{item.id}}" />	
 					    <div class="form-group">
-							    <label>{{txt('NAME')}}</label>
+							    <label>{{txt('NAME')}} *</label>
 							    <input type="text" class="form-control" id="name"
 							     name="name" value="{{item.name}}" />
 						</div>
 						<div class="form-group">
-							    <label>{{txt('state')}}</label>
-							    <select class="form-control" id="state">
+							    <label>{{txt('state')}} *</label>
+							    <select class="form-control" id="state" name="state">
 							      <option value="proposal">{{txt('proposal')}}</option>
 							      <option value="active">{{txt('active')}}</option>
 							      <option value="ended">{{txt('ended')}}</option>
@@ -78,49 +98,44 @@
 							    	name="avatar" value="{{item.avatar}}" />
 						</div>
 					    <div class="form-group">
-							    <label>{{txt('DEADLINE')}}</label>
+							    <label>{{txt('DEADLINE')}} *</label>
 							    <input type="date" class="form-control" id="deadline" 
 							    	name="deadline" value="{{item.deadline}}" />
 						</div>
 					    <div class="form-group">
-							    <label>{{txt('PROJECT_TO_ACTIVE')}}</label>
+							    <label>{{txt('PROJECT_TO_ACTIVE')}} *</label>
 							    <input type="number" class="form-control" id="project_to_active" 
 							    	name="project_to_active" value="{{item.project_to_active}}" />
 						</div>
 					    <div class="form-group">
-							    <label>{{txt('PROJECT_TO_CLOSE')}}</label>
+							    <label>{{txt('PROJECT_TO_CLOSE')}} *</label>
 							    <input type="number" class="form-control" id="project_to_close" 
-							    	name="project_to_close" value="{{item.project_to_close}}" />
+							    	name="project_to_close" value="{{item.project_to_close}}" />%
 						</div>
 					    <div class="form-group">
-							    <label>{{txt('MEMBER_TO_ACTIVE')}}</label>
+							    <label>{{txt('MEMBER_TO_ACTIVE')}} *</label>
 							    <input type="number" class="form-control" id="member_to_active" 
 							    	name="member_to_active" value="{{item.member_to_active}}" />
 						</div>
 					    <div class="form-group">
-							    <label>{{txt('MEMBER_TO_EXCLUDE')}}</label>
+							    <label>{{txt('MEMBER_TO_EXCLUDE')}} *</label>
 							    <input type="number" class="form-control" id="member_to_exclude" 
-							    	name="member_to_exclude" value="{{item.member_to_exclude}}" />
+							    	name="member_to_exclude" value="{{item.member_to_exclude}}" />%
 						</div>
 				        <p class="buttons">
-				                		<button class="btn btn-primary" type="submit"
-				                		    ng-if="(loggedState == 'admin')">
-				                			<em class="fa fa-check"></em>
-				                			{{txt('OK')}}
-				                		</button>	
-				                		&nbsp;
-				                		<a class="btn btn-secondary" target="_self"
-				                		    href="{{MYDOMAIN}}/opt/members/list/type/{{type}}/id/{{id}}">
+		                		<button class="btn btn-primary" type="button" id="btnOk">
+		                			<em class="fa fa-check"></em>
+		                			{{txt('OK')}}
+		                		</button>	
+		                		&nbsp;
+		                		<a class="btn btn-secondary" target="_self"
+			                		    href="{{backUrl}}">
 				                			<em class="fa fa-reply"></em>{{txt('BACK')}}
-				                		</a>
-				                		
+		                		</a>
 				        </p>
-						
 					</form>            	
                 	
-                	
-					<div id="divLike" ng-if="(item.id > 0) && 
-						((userState == 'active') || (userState == 'aspirant') || (userState == 'admin'))">
+					<div id="divLike">
 					<button id="likeUpBtn" type="button" class="btn btn-info">
 						{{txt('LIKE')}}
 						<em class="fa fa-thumbs-up"></em>
@@ -137,7 +152,7 @@
                 	
               	</div><!-- #projectForm -->  
 			 	<div class="clear"></div>
-			</div><!--  #memberForm --> 	
+			</div><!--  #projectForm --> 	
 		 	<div ng-include="templates.footer"></div>
 		 	{{onload()}}
 			
