--- a/views/html/navbar.html
+++ b/views/html/navbar.html
@@ -38,6 +38,7 @@
                   <em class="fa fa-wrench"></em>{{txt('PROJECTS')}}
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="{{MYDOMAIN}}/opt/projects/list" target="_self">{{txt('ALL')}}</a>
                   <a class="dropdown-item" href="{{MYDOMAIN}}/opt/projects/active" target="_self">{{txt('ACTIVE')}}</a>
                   <a class="dropdown-item" href="{{MYDOMAIN}}/opt/projects/closed" target="_self">{{txt('CLOSED')}}</a>
                   <a class="dropdown-item" href="{{MYDOMAIN}}/opt/projects/draft" target="_self">{{txt('DRAFT')}}</a>
