--- a/templates/default/htmlhead.html
+++ b/templates/default/htmlhead.html
@@ -21,8 +21,9 @@
 	 <link rel="stylesheet" href="{{MYDOMAIN}}/core/bootstrap.min.css">
 	 <!--  script src="{{MYDOMAIN}}/core/popper.js"></script -->
 	 
-	 <!-- awesome font -->	
+	 <!-- fonts -->	
 	 <link rel="stylesheet" href="{{MYDOMAIN}}/core/fontawesome/css/all.css">
+	 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Poppins" />
 
  	 <!-- main css -->
      <link rel="stylesheet" href="{{MYDOMAIN}}/templates/default/style.css">
