--- a/views/html/navbar.html
+++ b/views/html/navbar.html
@@ -42,10 +42,11 @@
                   <em class="fa fa-wrench"></em>{{txt('PROJECTS')}}
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="{{MYDOMAIN}}/opt/projects/list" target="_self">{{txt('ALL')}}</a>
-                  <a class="dropdown-item" href="{{MYDOMAIN}}/opt/projects/active" target="_self">{{txt('ACTIVE')}}</a>
-                  <a class="dropdown-item" href="{{MYDOMAIN}}/opt/projects/closed" target="_self">{{txt('CLOSED')}}</a>
-                  <a class="dropdown-item" href="{{MYDOMAIN}}/opt/projects/draft" target="_self">{{txt('DRAFT')}}</a>
+                  <a class="dropdown-item" href="{{MYDOMAIN}}/opt/projects/list/filterstate//" target="_self">{{txt('ALL')}}</a>
+                  <a class="dropdown-item" href="{{MYDOMAIN}}/opt/projects/list/filterstate/active" target="_self">{{txt('ACTIVE')}}</a>
+                  <a class="dropdown-item" href="{{MYDOMAIN}}/opt/projects/list/filterstate/closed" target="_self">{{txt('CLOSED')}}</a>
+                  <a class="dropdown-item" href="{{MYDOMAIN}}/opt/projects/list/filterstate/draft" target="_self">{{txt('DRAFT')}}</a>
+                  <a class="dropdown-item" href="{{MYDOMAIN}}/opt/projects/list/filterstate/proposal" target="_self">{{txt('PROPOSAL')}}</a>
                 </div>
               </li>
               <li class="nav-item dropdown">
