--- a/templates/default/style.css
+++ b/templates/default/style.css
@@ -107,15 +107,48 @@ button em {margin-right:5px}
 #newProjects h2 {text-align:center; font-size:40px; font-weight:300; color:#232323; padding:20px 0px 20px 0px}
 #newProjects .newProjects2 {vertical-align:top}
 #newProjects .newProject {display:inline-block; width:300px; height: 350px; 
-   overflow:hidden; text-align:center; padding:5px}
-#newProjects .newProject .img {width:300x; height:200px; overflow:hidden}
+   overflow:hidden; text-align:center; padding:5px; margin:5px 20px 5px 5px}
+#newProjects .newProject .img {width:300x; height:200px; overflow:hidden;  background-color:silver}
 #newProjects .newProject h3 {text-align:center; font-size:16px; font-weight:300; color:#232323
    height:20px; overflow:hidden}
 #newProjects .newProjectTxt {display:inline-block; margin-top:-240px; opacity:0;  
    width:0px; min-width:0px; height:250px; padding:5px; overflow:hidden;
    background-color:#EC342C; color:white;
-   font-size:14x; font-weight:300; text-align:center;}
+   font-size:16px; font-weight:300; text-align:center;}
 #newProjects .newProject:hover .newProjectTxt {width:300px; opacity:0.99; transition:0.6s ease} 
+
+#newGroups {padding:30px 10px 10px 10px; text-align:center; background-color:#EFEFEF}
+#newGroups h2 {text-align:center; font-size:40px; font-weight:300; color:#232323; padding:20px 0px 20px 0px}
+#newGroups .newGroups2 {vertical-align:top}
+#newGroups .newGroup {display:inline-block; width:300px; height: 400px; 
+   overflow:hidden; text-align:center; padding:5px; background-color:white; margin:5px 20px 5px 5px}
+#newGroups .newGroup .img {width:300px; height:200px; overflow:hidden; background-color:silver; margin:0px;}
+#newGroups .newGroup h3 {text-align:left; font-size:20px; font-weight:300; color:black;
+   background-color:white; margin:0px; padding: 30px 0px 0px 20px; height:auto}
+#newGroups .newGroupTxt {display:inline-block; margin:0px;   
+   max-height:100px; padding:25px; overflow:hidden;
+   background-color:white; color:#767676;
+   font-size:16px; font-weight:300; text-align:left}
+#newGroups .newGroup button {margin:-240px 0px 0px 0px; padding:5px 45px 5px 45px; z-index:2;
+   border-radius:20px; opacity:0}
+#newGroups .newGroup:hover a {text-decoration:none}
+#newGroups .newGroup:hover img {opacity:0.5}
+#newGroups .newGroup:hover button {opacity:0.99}
+
+#newUsers {padding:30px 10px 10px 10px; text-align:center; background-color:white}
+#newUsers h2 {text-align:center; font-size:40px; font-weight:300; color:#232323; padding:20px 0px 20px 0px}
+#newUsers .newUsers2 {vertical-align:top}
+#newUsers .newUser {display:inline-block; width:300px; height: 400px; 
+   overflow:hidden; text-align:center; padding:5px; background-color:white; margin:5px 20px 5px 5px}
+#newUsers .newUser .img {width:300px; height:130px; overflow:hidden;  margin:0px;}
+#newUsers .newUser img {width:120px; height:120px; border-radius:60px}
+#newUsers .newUser h3 {text-align:center; font-size:20px; font-weight:300; color:black;
+   background-color:white; margin:0px; padding: 30px 0px 0px 20px; height:auto}
+#newUsers .newUserTxt {display:inline-block; margin:0px;   
+   max-height:100px; padding:25px; overflow:hidden;
+   background-color:white; color:#767676;
+   font-size:16px; font-weight:300; text-align:center}
+#newUsers .newUser:hover a {text-decoration:none}
 
 .info {background-color:silver; color:black; padding:10px; text-align:center;}   
 /* recent-work and tema-wrap  */
