--- a/views/html/usersprofile.html
+++ b/views/html/usersprofile.html
@@ -16,8 +16,8 @@
         		<input type="hidden" name="enabled" value="{{enabled}}" />
         		<input type="hidden" name="reg_mode" id="reg_mode" value="{{reg_mode}}" />
         		<input type="hidden" name="backUrl" id="backUrl" value="{{backUrl}}" />
-                <p id="pAvatar" ng-if="avatarUrl > 'a'">
-                <img id="imgAvatar" src="{{avatarUrl}}" style="display:none" alt="avatar" />
+                <p id="pAvatar" ng-if="userData.avatar != ''">
+                <img id="imgAvatar" src="{{userData.avatar}}" style="display:none" alt="avatar" />
                 </p>
                 <p>
               		<label>{{txt('NICK')}} *:</label>
@@ -39,12 +39,17 @@
               			<em class="fa fa-eye"></em>
               		</button>
               	</p>
+              	<p>
+              		<label>{{txt('PUBINFO')}}:</label>
+              		<textarea id="pubinfo" name="pubinfo" cols="80" rows="5">{{pubinfo}}</textarea>
+              	</p>
+              	
 			    <div class="clear"><br /></div>
               	<p class="formButtons">
               		<button type="button" id="btnOk" class="btn btn-primary">
               			<em class="fa fa-check"></em>{{txt('OK')}}</button>&nbsp;
               		<button type="button" id="btnCancel" class="btn btn-secondary">
-              			<em class="fa fa-arrow-left"></em>{{txt('CANCEL')}}</button>&nbsp;
+              			<em class="fa fa-arrow-left"></em><span>{{txt('CANCEL')}}</span></button>&nbsp;
               		&nbsp;&nbsp;&nbsp;
               		<button type="button" id="btnRemove" class="btn btn-danger" ng-if="id > 0">
               			<em class="fa fa-times-circle"></em>{{txt('REMOVE_ACCOUNT')}}</button>&nbsp;
